--- a/raylib-sys/Cargo.toml
+++ b/raylib-sys/Cargo.toml
@@ -11,10 +11,9 @@ categories = ["external-ffi-bindings"]
 edition = "2018"
 
 [build-dependencies]
-bindgen = "0.47.0"
+cmake = "0.1.35"
 curl = "0.4.19"
 flate2 = "1.0.6"
 pkg-config = "0.3.14"
 tar = "0.4.20"
 url = "1.7.2"
-zip = "0.5.0"
